refactor:Coupon 도메인으로 만들기